# akonadi-tasks-applet

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  model.cpp  model.h  modelitem.cpp  modelitem.h  qmldir  qmlplugins.cpp  qmlplugins.h  sortfiltermodel.cpp  sortfiltermodel.h
src/applet/: CMakeLists.txt
src/applet/declarative/: metadata.desktop.cmake
src/applet/declarative/contents/ui/: CompactRepresentation.qml  TaskItem.qml  main.qml
